--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,20 +6,6 @@ jobs:
     steps: 
       - name: Checkout Repo
         uses: actions/checkout@v3
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with: 
-          python-version: '3.10'
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pyyaml
       - name: Run Feed Generator
-        run: python feed.py
-      - name: Push Repo
-        run : |
-          git config user.name Mahraz
-          git config user.email mahraz.ewu@gmail.com
-          git add .
-          git commit -m "Modified Feed"
-          git push
+        uses: mahraz-hasnat/podcast-generator@main
+        
